# helix

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/pages/: HeroHands.tsx  Home.tsx  IntroTerminal.tsx  NetworkBackground.tsx  ProtocolsSection.tsx  RdtCourse.tsx  RdtProtocols.tsx  RotatingTagline.tsx  ScrollHelix.tsx  SiteChrome.tsx  chrome.css  course.css  home.css  intro.css  protocols.css  rdt.css  rdtStage.ts
src/helix/: __init__.py
src/helix/api/: main.py  rdt_protocols.py
src/helix/engine/: __init__.py  channel.py  events.py  sim.py
src/helix/protocols/: __init__.py  base.py  gbn.py  selective_repeat.py  stop_and_wait.py
tests/: test_api.py  test_channel.py  test_protocols.py  test_sim.py
web/: index.html
